<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activity.OfficesActivity"
    tools:showIn="@layout/activity_offices">

    <ImageView
        android:id="@+id/imageMinskView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:src="@drawable/neotech"
        tools:ignore="MissingConstraints" />

    <TabHost
        android:id="@android:id/tabhost"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:theme="@style/TabHostTheme">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tvTab1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_minsk"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"/>

                <TextView
                    android:id="@+id/tvTab2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_riga"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"/>

                <TextView
                    android:id="@+id/tvTab3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_tallinn"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"/>

                <TextView
                    android:id="@+id/tvTab4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_piter"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"/>

                <TextView
                    android:id="@+id/tvTab5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_florida"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"/>

                <Button
                    android:id="@+id/button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:onClick="onButtonClick"
                    android:textColor="#000000"
                    android:text="@string/show_images" />

            </FrameLayout>
        </LinearLayout>
    </TabHost>

</android.support.constraint.ConstraintLayout>